force-app/main/default/objects/NewAccount__e/NewAccount__e.object-meta.xml
<CustomObject>
    <label>NewAccount</label>
    <pluralLabel>NewAccounts</pluralLabel>
</CustomObject>