force-app/main/default/objects/NewAccount__e/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <description>The complete billing address for invoices and financial documents in the ERP system. Should include street, city, postal code, and country in a single text block.</description>
    <label>Billing Address</label>
    <length>225</length>
    <type>Text</type>
</CustomField>