force-app/main/default/objects/NewAccount__e/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Billing Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>