force-app/main/default/objects/NewAccount__e/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Used for ERP system compliance checks.</description>
    <label>Country</label>
    <length>225</length>
    <type>Text</type>
</CustomField>