force-app/main/default/objects/NewAccount__e/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <description>Distribution channel code for ERP integration.</description>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>