force-app/main/default/objects/NewAccount__e/fields/ERPPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>ERPPaymentTerms__c</fullName>
    <description>Payment terms code for ERP integration.</description>
    <label>ERP Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>