force-app/main/default/objects/NewAccount__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>The Salesforce record ID (18-character) being synchronized with the ERP system through this platform event.</description>
    <label>Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>