force-app/main/default/objects/NewAccount__e/fields/ILNNo__c.field-meta.xml
<CustomField>
    <fullName>ILNNo__c</fullName>
    <description>International Location Number (ILN) assigned to a business entity in external systems, synchronized with ERP records.</description>
    <label>ILNNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>