force-app/main/default/objects/NewAccount__e/fields/LegalForm__c.field-meta.xml
<CustomField>
    <fullName>LegalForm__c</fullName>
    <description>The legal form of the business entity (e.g., GmbH, AG, KG) as registered in the ERP system, determining structure and liability rules.</description>
    <label>Legal Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>