force-app/main/default/objects/NewAccount__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Official legal name of the business entity or contact person as recorded in the ERP system.</description>
    <label>Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>