force-app/main/default/objects/NewAccount__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>The Salesforce User ID (18-character) responsible for this record, synchronized with ERP system owner fields.</description>
    <label>OwnerId</label>
    <length>225</length>
    <type>Text</type>
</CustomField>