force-app/main/default/objects/NewAccount__e/fields/ParentDistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>ParentDistributionChannel__c</fullName>
    <label>Parent Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>