force-app/main/default/objects/NewAccount__e/fields/ParentErpCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ParentErpCustomerNumber__c</fullName>
    <label>Parent ERP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>