force-app/main/default/objects/NewAccount__e/fields/ParentSalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>ParentSalesOrganization__c</fullName>
    <label>Parent Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>