force-app/main/default/objects/NewAccount__e/fields/SalesCategory__c.field-meta.xml
<CustomField>
    <fullName>SalesCategory__c</fullName>
    <label>Sales Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>