force-app/main/default/objects/NewAccount__e/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Formal title used in ERP system correspondence (e.g., &apos;Herr&apos;, &apos;Frau&apos;, &apos;Firma&apos;). Determines addressing in official documents.</description>
    <label>Salutation</label>
    <length>226</length>
    <type>Text</type>
</CustomField>