force-app/main/default/objects/NewAccount__e/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <description>The complete delivery address in the ERP system, used for logistics and package labeling in a single text format.</description>
    <label>Shipping Address</label>
    <length>225</length>
    <type>Text</type>
</CustomField>