force-app/main/default/objects/NewAccount__e/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <label>Shipping City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>