force-app/main/default/objects/NewAccount__e/fields/ShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>ShippingCondition__c</fullName>
    <description>Shipping condition code for ERP integration.</description>
    <label>Shipping Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>