force-app/main/default/objects/NewAccount__e/fields/ShippingHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingHouseNumber__c</fullName>
    <label>Shipping House Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>