force-app/main/default/objects/NewAccount__e/fields/ShippingPostal__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostal__c</fullName>
    <label>Shipping Postal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>